@@ -12,6 +12,8 @@ version 0.9.0 - Not released, available at https://simupop.svn.sourceforge.net/s
   - NEW: Dump() also display information fields.
   - NEW: Expose population::pushAndDiscard(pop) as population::push().
   - NEW: Add parameter subPop to all operators.
+  - CHG: Move operators pySubset() and randomSample(), and caseControlSample()
+		from simuPOP core to simuUtil.py.
 
 version 0.8.9 - tagged, but not publically released (rev 1948).
   - DOC: Adjust reference output for simuPOP classes.
